Do not add a caches to its engine if the salt cannot be initialized https://bugs.webkit.org/show_bug.cgi?id=194604

Reviewed by Antti Koivisto.

This is a follow-up to https://bugs.webkit.org/show_bug.cgi?id=194588.
We should return early if initialize fails.

* NetworkProcess/cache/CacheStorageEngine.cpp:
(WebKit::CacheStorage::Engine::readCachesFromDisk):


Canonical link: https://commits.webkit.org/209048@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@241544 268f45cc-cd09-0410-ab3c-d52691b4dbfc